Fix main menu spacing

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -517,7 +517,7 @@ p.img-404 {
   text-align: center;
   font-size: .9em;
   margin-bottom: 96px;
-  margin-top: 64px;
+  margin-top: 160px;
 
   p {
     margin: 0;
